--- a/app/views/mass-mailing-upload.html
+++ b/app/views/mass-mailing-upload.html
@@ -194,10 +194,12 @@
                     <div class="col-lg-9 col-lg-offset-3">
                       <label for="shipment_date" class="control-label required-" style="display: inline-block; padding: 0; height: 34px; line-height: 34px;" translate="MASS_MAIL_UPLOAD.COLLECTION.DATE">Date</label>&nbsp;
                       <div class="input-group" style="width: 160px; display: inline-table; vertical-align: middle;">
-                        <span class="input-group-addon">
-                          <i class="fa fa-calendar"></i>
+                        <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="shipDate" is-open="popup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+                        <span class="input-group-btn">
+                          <button type="button" class="btn btn-default" ng-click="openDate()">
+                            <i class="glyphicon glyphicon-calendar"></i>
+                          </button>
                         </span>
-                        <input type="text" id="shipment_date" name="shipment_date" class="form-control datepicker hasDatepicker" value="11/01/2016" size="10" maxlength="10">
                       </div>
                       <span translate="MASS_MAIL_UPLOAD.COLLECTION.BETWEEN">&nbsp;&nbsp;Between&nbsp;</span>
 
